--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -97,5 +97,5 @@ custom:
         - "/api/auth/logout"
       # 需要过滤的请求，不限方法
       pattern:
-        - "/test/*"
+#        - "/test/*"
         - "/druid/**"
